--- a/src/app/featured/course/pages/course-table/course-table.component.html
+++ b/src/app/featured/course/pages/course-table/course-table.component.html
@@ -11,25 +11,47 @@
 
     <ng-container matColumnDef="startDate">
       <th mat-header-cell *matHeaderCellDef> Fecha Inicio </th>
-      <td mat-cell *matCellDef="let course"> {{course.startDate | date:'short'}} </td>
+      <td mat-cell *matCellDef="let course"> {{course.startDate | date:'fullDate'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="endDate">
       <th mat-header-cell *matHeaderCellDef> Fecha Finalización </th>
-      <td mat-cell *matCellDef="let course"> {{course.endDate | date:'short'}} </td>
+      <td mat-cell *matCellDef="let course"> {{course.endDate | date:'fullDate'}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="professor">
+      <th mat-header-cell *matHeaderCellDef> Profesor </th>
+      <td mat-cell *matCellDef="let course"> {{course.professor}} </td>
     </ng-container>
 
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Acciones </th>
+        <th mat-header-cell *matHeaderCellDef class="w-12rem"> Acciones </th>
         <td mat-cell *matCellDef="let course">
-            <button mat-icon-button *ngIf="canView" [routerLink]="course.id" color="primary">
+          <button 
+            *ngIf="canView" 
+            mat-icon-button 
+            [routerLink]="course.id" 
+            matTooltip="Detalles" 
+            color="primary">
                 <mat-icon>visibility</mat-icon>
             </button>
-            <button mat-icon-button *ngIf="canEdit" color="primary" (click)="edit(course)">
+            
+            <button 
+              *ngIf="canEdit" 
+              mat-icon-button 
+              color="primary"
+              matTooltip="Modificar" 
+              (click)="edit(course)">
                 <mat-icon>edit</mat-icon>
             </button>
-            <button mat-icon-button *ngIf="canDelete" color="warn" (click)="delete(course)">
+
+            <button 
+              *ngIf="canDelete" 
+              mat-icon-button 
+              color="warn"
+              matTooltip="Eliminar"  
+              (click)="delete(course)">
                 <mat-icon>delete</mat-icon>
             </button>
         </td>
