--- a/src/app/featured/home/home.component.html
+++ b/src/app/featured/home/home.component.html
@@ -1,42 +1,29 @@
 <header class="my-7">
     <h1 class="text-center text-6xl uppercase font-italic font-bold">Coderhouse</h1>
 </header>
-<section class="mx-4 mb-6">
-    <p class="text-xl">¡Hola!</p>
-    <p class="text-base">Bienvenido a CoderHouse, la plataforma que desarrollará todas tus habilidades y por la cual vas poder crecer profesionalmente.</p>
+<section class="mx-4 mb-4">
+    <h2 class="text-2xl font-bold">¡Bienvenido {{userName$ | async | titlecase}}!</h2>
+    <div *ngIf="(userRole$ | async | lowercase) === 'admin'" class="text-xl my-4">
+        <p>Usted posee un usuario con rol de <strong>ADMINISTRADOR</strong> por lo que tiene un control completo de la plataforma, es decir, puede realizar las siguientes operaciones: </p> 
+        <mat-list>
+            <mat-list-item>Alta, Baja, Modificación y Listado de Estudiantes</mat-list-item>
+            <mat-list-item>Alta, Baja, Modificación y Listado de Cursos</mat-list-item>
+            <mat-list-item>Alta, Baja y Listado de Inscripciones</mat-list-item>
+            <mat-list-item>Alta, Baja, Modificación y Listado de Usuarios</mat-list-item>
+        </mat-list>
+    </div>
+    <div *ngIf="(userRole$ | async | lowercase) !== 'admin'" class="text-xl my-4">
+        <p>Usted posee un usuario con rol <strong>{{userRole$ | async}}</strong> por lo tiene permisos restrigidos en la plataforma, es decir, puede realizar las siguientes operaciones: </p> 
+        <mat-list>
+            <mat-list-item>Listado y acceso de solo lectura de Estudiantes</mat-list-item>
+            <mat-list-item>Listado y acceso de solo lectura de Cursos</mat-list-item>
+            <mat-list-item>Alta, Baja y Listado de Inscripciones</mat-list-item>
+        </mat-list>
+    </div>
 </section>
-
-<section class="w-full h-full px-4 my-2 flex flex-row justify-content-around align-items-end gap-4">
-    <mat-card class="min-w-min w-15rem surface-700">
-        <mat-card-header>
-            <h2 class="mx-auto font-semibold">Estudiantes</h2>
-        </mat-card-header>
-        <mat-card-content>
-            <div class="w-6rem h-6rem border-circle surface-600 text-2xl font-bold flex flex-row align-items-center justify-content-center mx-auto shadow-2">
-                120
-            </div>
-        </mat-card-content>
-    </mat-card>
-
-    <mat-card class="min-w-min w-20rem h-15rem surface-700 min-w-min">
-        <mat-card-header>
-            <h2 class="mx-auto font-semibold">Cursos</h2>
-        </mat-card-header>
-        <mat-card-content>
-            <div class="w-8rem h-8rem border-circle surface-600 text-4xl font-bold flex flex-row align-items-center justify-content-center mx-auto shadow-2">
-                15
-            </div>
-        </mat-card-content>
-    </mat-card>
-
-    <mat-card class="min-w-min w-15rem surface-700 min-w-min">
-        <mat-card-header>
-            <h2 class="mx-auto font-semibold">Materias</h2>
-        </mat-card-header>
-        <mat-card-content>
-            <div class="w-6rem h-6rem border-circle surface-600 text-2xl font-bold flex flex-row align-items-center justify-content-center mx-auto shadow-2">
-                50
-            </div>
-        </mat-card-content>
-    </mat-card>
+<section class="mx-4 mb-6">
+    <h2 class="text-2xl font-bold">Inscripciones</h2>
+    <p class="text-lg my-4">Puede realizar inscripciones tanto en la sección de <strong>Estudiantes</strong> como de <strong>Cursos</strong>.</p>
+    <p class="text-lg my-4">Para inscribir a un estudiante en uno o mas cursos, debe dirigirse a la sección de <strong routerLink="/dashboard/student" class="no-underline text-blue-400 cursor-pointer">Estudiantes</strong>, ingresar a la opción de detalles del estudiante deseado y ahi tendrá la opcion para hacer las inscripciones.</p>
+    <p class="text-lg my-4">Para inscribir estudiantes en un curso, debe dirigirse a la seccion de <strong routerLink="/dashboard/course" class="no-underline text-orange-400 cursor-pointer">Cursos</strong>, ingresar a la opción de detalles del curso deseado y ahi tendrá la opcion para hacer las inscripciones de uno o mas estudiantes.</p>
 </section>
