--- a/src/app/featured/student/pages/student-table/student-table.component.html
+++ b/src/app/featured/student/pages/student-table/student-table.component.html
@@ -25,26 +25,39 @@
     <!-- Birthdate Column -->
     <ng-container matColumnDef="birthdate">
       <th mat-header-cell *matHeaderCellDef> Fecha Nacimiento </th>
-      <td mat-cell *matCellDef="let student"> {{student.birthdate | date:'short'}} </td>
+      <td mat-cell *matCellDef="let student"> {{student.birthdate | date:'shortDate'}} </td>
     </ng-container>
 
     <!-- phone Column -->
     <ng-container matColumnDef="registerDate">
       <th mat-header-cell *matHeaderCellDef> Fecha de Registro </th>
-      <td mat-cell *matCellDef="let student"> {{student.registerDate | date:'short'}} </td>
+      <td mat-cell *matCellDef="let student"> {{student.registerDate | date:'mediumDate'}} </td>
     </ng-container>
 
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Acciones </th>
+        <th mat-header-cell *matHeaderCellDef class="w-12rem"> Acciones </th>
         <td mat-cell *matCellDef="let student">
-            <button mat-icon-button [routerLink]="student.id" color="primary">
+            <button 
+              mat-icon-button
+              matTooltip="Detalles" 
+              [routerLink]="student.id" color="primary">
                 <mat-icon>visibility</mat-icon>
             </button>
-            <button mat-icon-button color="primary" (click)="edit(student)">
-                <mat-icon>edit</mat-icon>
+
+            <button 
+              mat-icon-button 
+              color="primary"
+              matTooltip="Modificar"  
+              (click)="edit(student)">
+                  <mat-icon>edit</mat-icon>
             </button>
-            <button mat-icon-button color="warn" (click)="delete(student)">
+
+            <button 
+              mat-icon-button 
+              color="warn"
+              matTooltip="Eliminar" 
+              (click)="delete(student)">
                 <mat-icon>delete</mat-icon>
             </button>
         </td>
