--- a/src/app/featured/user/user.component.html
+++ b/src/app/featured/user/user.component.html
@@ -1,10 +1,11 @@
-<div class="m-5 mb-3">
-    <h2 title class="my-2">Usuarios</h2>
-    <section class="grid grid-nogutter py-2">   
-        <p class="col-12">En esta sección se encuentran los usuarios que pueden ingresar y operar en la plataforma.</p>
-        <p class="col-12">Aquí podrá realizar Altas, Modificaciones y Bajas de los mismos.</p>
+<div class="m-5">
+    <h2 title class="mt-2 mb-6 font-bold">Usuarios</h2>
+    <section class="grid grid-nogutter py-2 my-2">    
+        <p class="col-12 text-lg">Listado de los usuarios de la plataforma. Aquí podrá realizar distintas operaciones sobre los usuarios.</p>
+        <p class="col-12 text-lg">Esta sección es unicamente accesible para los usuarios con un rol de administrador.</p>
     </section>
 </div>
+
 <section class="grid grid-nogutter mx-3">
     <button mat-raised-button 
         color="primary"
