--- a/src/app/featured/inscription/pages/student-inscription-dialog-form/student-inscription-dialog-form.component.html
+++ b/src/app/featured/inscription/pages/student-inscription-dialog-form/student-inscription-dialog-form.component.html
@@ -13,7 +13,7 @@
                   <span>#{{student.id}} | {{student.name }}</span>
                 </mat-option>
               </mat-autocomplete>
-              <mat-hint class="text-blue-500">Filtro unicamente por ID</mat-hint>                
+              <mat-hint class="text-blue-500">Filtro únicamente por ID</mat-hint>                
         </mat-form-field>
         
       </ng-container>
