--- a/src/app/featured/student/pages/student-detail/student-detail.component.html
+++ b/src/app/featured/student/pages/student-detail/student-detail.component.html
@@ -41,7 +41,7 @@
 </section>
 <section>
     <header class="m-1 flex flex-row align-items-center justify-content-between">
-        <h2>Gestion de Cursos</h2>
+        <h2>Gestión de Cursos</h2>
         <button mat-raised-button color="primary" (click)="assignCourse()">Asignar Curso</button>    
     </header>
     <p class="my-4 text-base">Cursos en los que se encuentra inscripto el estudiante: </p>
