--- a/src/app/featured/user/pages/user-table/user-table.component.html
+++ b/src/app/featured/user/pages/user-table/user-table.component.html
@@ -57,6 +57,6 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" [colSpan]="displayedColumns.length">No hay coursos disponibles..</td>
+      <td class="mat-cell" [colSpan]="displayedColumns.length">No hay usuarios disponibles..</td>
     </tr>
   </table>
