--- a/src/app/featured/user/user.component.html
+++ b/src/app/featured/user/user.component.html
@@ -2,7 +2,7 @@
     <h2 title class="mt-2 mb-6 font-bold">Usuarios</h2>
     <section class="grid grid-nogutter py-2 my-2">    
         <p class="col-12 text-lg">Listado de los usuarios de la plataforma. Aquí podrá realizar distintas operaciones sobre los usuarios.</p>
-        <p class="col-12 text-lg">Esta sección es unicamente accesible para los usuarios con un rol de administrador.</p>
+        <p class="col-12 text-lg">Esta sección es únicamente accesible para los usuarios con un rol de administrador.</p>
     </section>
 </div>
 
