--- a/src/app/dashboard/layout/toolbar/toolbar.component.html
+++ b/src/app/dashboard/layout/toolbar/toolbar.component.html
@@ -5,7 +5,7 @@
     <span class="text-2xl">Coderhouse</span>
     <span class="flex-1"></span>
     <div class="relative w-3rem h-3rem select-none" [matMenuTriggerFor]="menu" *ngIf="user$ | async as user">
-      <div class="flex flex-row align-items-center justify-content-center border-circle w-full h-full bg-red-400 ">{{user.name[0] | uppercase}}{{user.surname[0] | uppercase}}</div>
+      <div class="flex flex-row align-items-center justify-content-center border-circle w-full h-full bg-red-400 ">{{user.name![0] | uppercase}}{{user.surname![0] | uppercase}}</div>
       <mat-icon class="w-1rem h-1rem text-base absolute bottom-0 right-0 surface-300 border-circle cursor-pointer">expand_more</mat-icon>
     </div>
   </mat-toolbar>
