--- a/src/app/featured/course/pages/course-table/course-table.component.html
+++ b/src/app/featured/course/pages/course-table/course-table.component.html
@@ -61,6 +61,6 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" [colSpan]="displayedColumns.length">No hay coursos disponibles..</td>
+      <td class="mat-cell" [colSpan]="displayedColumns.length">No hay cursos disponibles..</td>
     </tr>
   </table>
